:art: Refactor vote to stake
